context menu fixes and various CSS fixes

--- a/editor/sass/editor/_editor-assets-panel.scss
+++ b/editor/sass/editor/_editor-assets-panel.scss
@@ -334,6 +334,13 @@
                 }
             }
         }
+
+        > .pcui-gridview {
+            width: 100%;
+            background-color: $bcg-dark;
+            border-left: 1px solid $border-primary;
+            border-top: 1px solid $border-primary;
+        }
     }
 }
 
