Border fixes, Fix highlight box on table view

--- a/editor/sass/pcui/_pcui-table.scss
+++ b/editor/sass/pcui/_pcui-table.scss
@@ -62,8 +62,8 @@
     white-space: nowrap;
     vertical-align: middle;
     text-align: left;
-    box-sizing: border-box;
     font-size: 13px;
+    padding: 0;
 
     .pcui-element {
         color: inherit;
