--- a/editor/sass/editor/_editor-assets-panel.scss
+++ b/editor/sass/editor/_editor-assets-panel.scss
@@ -333,6 +333,15 @@
                     border-left: 0;
                 }
             }
+
+            tbody {
+                > .pcui-table-row > .pcui-table-cell {
+                    > .pcui-label {
+                        margin-top: 4px;
+                        margin-bottom: 4px;
+                    }
+                }
+            }
         }
 
         > .pcui-gridview {
@@ -345,8 +354,6 @@
 }
 
 .pcui-asset-panel-details-name {
-    border: 4px solid transparent;
-
     > .pcui-asset-thumb {
         vertical-align: middle;
         margin-left: $element-margin;
@@ -387,7 +394,20 @@
 
     .pcui-asset-panel-details-name {
         color: $text-primary;
-        border-color: $text-active;
+        position: relative;
+
+        &:after {
+            content: ' ';
+            display: block;
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            box-sizing: border-box;
+            border: 3px solid $text-active;
+            pointer-events: none;
+        }
     }
 
     &.pcui-gridview-item {
