Some CSS fixes in asset list input and show CANCEL button instead of DONE if user hasn't made any changes yet

--- a/editor/sass/pcui/_pcui-asset-list.scss
+++ b/editor/sass/pcui/_pcui-asset-list.scss
@@ -22,6 +22,16 @@
     z-index: 102;
 }
 
+.pcui-asset-list-btn-add {
+    flex: 1;
+    margin-left: 0;
+}
+
+.pcui-asset-list-btn-done {
+    flex: 1;
+    margin-right: 0;
+}
+
 .pcui-asset-list-btn-remove {
     margin-left: auto;
     margin-right: 0;
