Working version of asset picker

--- a/editor/sass/editor/_editor-assets-panel.scss
+++ b/editor/sass/editor/_editor-assets-panel.scss
@@ -581,7 +581,7 @@
             }
 
             .pcui-select-input-list {
-                max-height: initial;
+                max-height: 430px;
             }
         }
 
