--- a/editor/sass/pcui/_pcui-progress.scss
+++ b/editor/sass/pcui/_pcui-progress.scss
@@ -2,9 +2,7 @@
     height: 4px;
     background-color: $bcg-darkest;
     transition: opacity 100ms;
-    display: flex;
-    flex-grow: 1;
-
+    width: 100%;
 
     .pcui-progress-inner {
         width: 0%;
