--- a/editor/sass/pcui/pcui.scss
+++ b/editor/sass/pcui/pcui.scss
@@ -34,6 +34,7 @@
 @import 'pcui-drop-target';
 @import 'pcui-inspector';
 @import 'pcui-progress';
+@import 'pcui-spinner';
 @import 'pcui-infobox';
 @import 'pcui-code';
 @import 'pcui-tooltip';
