--- a/editor/sass/pcui/_pcui-spinner.scss
+++ b/editor/sass/pcui/_pcui-spinner.scss
@@ -10,4 +10,17 @@
         animation-timing-function: linear;
         transform-origin: center;
     }
+
+    &.pcui-error {
+        g {
+            animation: none;
+
+            > path {
+                fill: $error;
+                &.spin {
+                    fill: $error-secondary;
+                }
+            }
+        }
+    }
 }
