--- a/editor/sass/pcui/_pcui-progress.scss
+++ b/editor/sass/pcui/_pcui-progress.scss
@@ -28,6 +28,27 @@
     }
 }
 
+.pcui-progress.pcui-error {
+    .pcui-progress-inner {
+        $first: rgba(#f77, 1);
+        $second: rgba(darken(#f77, 17%), 1);
+
+        background: $text-active;
+        background: -webkit-gradient(left top, right bottom, color-stop(0%, $first), color-stop(25%, $first), color-stop(26%, $second), color-stop(50%, $second), color-stop(51%, $first), color-stop(75%, $first), color-stop(76%, $second), color-stop(100%, $second));
+        background: -webkit-linear-gradient(-45deg, $first 0%, $first 25%, $second 26%, $second 50%, $first 51%, $first 75%, $second 76%, $second 100%);
+        background: -moz-linear-gradient(-45deg, $first 0%, $first 25%, $second 26%, $second 50%, $first 51%, $first 75%, $second 76%, $second 100%);
+        background: -ms-linear-gradient(-45deg, $first 0%, $first 25%, $second 26%, $second 50%, $first 51%, $first 75%, $second 76%, $second 100%);
+        background: -o-linear-gradient(-45deg, $first 0%, $first 25%, $second 26%, $second 50%, $first 51%, $first 75%, $second 76%, $second 100%);
+        background: linear-gradient(135deg, $first 0%, $first 25%, $second 26%, $second 50%, $first 51%, $first 75%, $second 76%, $second 100%);
+        background-position: 0px 0px;
+        background-size: 24px 24px;
+        background-repeat: repeat;
+
+        -webkit-animation: none;
+        animation: none;
+    }
+}
+
 // ui-progress animation
 @-webkit-keyframes pcui-progress-background {
     from { background-position: 0px 0; }
