[proposal] switch from compass to node-sass (#359)
compass has been unmaintained for several years and node-sass does close
to the same thing (and does it faster)

this keeps us using supported software and actually simplifies our dev
setup/environment

--- a/editor/sass/editor/editor.scss
+++ b/editor/sass/editor/editor.scss
@@ -1,5 +1,5 @@
-@import "variables";
-@import 'fonts';
+@import "../variables";
+@import '../fonts';
 @import "../pcui/pcui-common";
 @import "editor-common";
 @import "editor-layout";
