--- a/editor/sass/partials/_version-control.scss
+++ b/editor/sass/partials/_version-control.scss
@@ -1,4 +1,4 @@
-@import 'variables';
+@import '../variables';
 
 .ui-overlay.version-control-overlay {
     z-index: 9999; // just below the confirm picker
