--- a/editor/sass/pcui/pcui.scss
+++ b/editor/sass/pcui/pcui.scss
@@ -1,5 +1,5 @@
-@import 'variables';
-@import 'fonts';
+@import '../variables';
+@import '../fonts';
 @import 'pcui-common';
 @import 'pcui-flex';
 @import 'pcui-grid';
