create an anim component in the editor & add support for the animstategraph asset type

--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -72,6 +72,9 @@ strong {
     &.type-animation:before {
         content: '\E213';
     }
+    &.type-animstategraph:before {
+        content: '\E199';
+    }
     &.type-audio:before {
         content: '\E210';
     }
