--- a/editor/sass/editor/editor.scss
+++ b/editor/sass/editor/editor.scss
@@ -19,11 +19,13 @@
 @import "editor-component-script-inspector";
 @import "editor-component-sound-inspector";
 @import "editor-component-sprite-inspector";
+@import "editor-component-anim-inspector";
 @import "editor-component-animation-inspector";
 @import "editor-asset-preview";
 @import "editor-asset-model-inspector";
 @import "editor-asset-material-inspector";
 @import "editor-asset-cubemap-inspector";
+@import "editor-asset-animstategraph-inspector";
 @import "editor-asset-audio-inspector";
 @import "editor-asset-texture-inspector";
 @import "editor-asset-audio-inspector";
