--- a/editor/sass/editor/_editor-assets-panel.scss
+++ b/editor/sass/editor/_editor-assets-panel.scss
@@ -497,6 +497,23 @@
     }
 }
 
+.pcui-asset-grid-view-item.type-textureatlas:before {
+    @extend .font-icon;
+    content: '\E332';
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    font-size: 16px;
+}
+
+.pcui-asset-panel-grid-view-small {
+    .pcui-asset-grid-view-item.type-textureatlas:before {
+        top: 1px;
+        left: 1px;
+        font-size: 10px;
+    }
+}
+
 .pcui-asset-panel-task-running, .pcui-asset-panel-task-failed {
     .pcui-spinner {
         display: inline-block;
