Json script attributes (#58)

--- a/editor/sass/editor/_editor-asset-script-inspector.scss
+++ b/editor/sass/editor/_editor-asset-script-inspector.scss
@@ -23,6 +23,7 @@
     background-color: #2c393c;
     padding: 6px;
     margin: 0;
+    white-space: normal;
 }
 
 .script-asset-inspector-attribute {
