--- a/editor/sass/pcui/_pcui-inspector.scss
+++ b/editor/sass/pcui/_pcui-inspector.scss
@@ -16,6 +16,13 @@
     > .pcui-asset-input {
         margin: 3px 10px;
     }
+
+    > .pcui-panel {
+        margin: 3px 10px;
+        > .pcui-panel-content {
+            padding: 0 3px;
+        }
+    }
 }
 
 .pcui-inspector-subhead {
