make the sps selection a dropdown

--- a/editor/sass/editor/_editor-settings-asset-tasks.scss
+++ b/editor/sass/editor/_editor-settings-asset-tasks.scss
@@ -3,7 +3,7 @@
 }
 
 .asset-tasks-settings-panel-attributes {
-    .pcui-label {
+    .pcui-label-group > .pcui-label {
         width: 42% !important;
     }
 }
