ensure the entity search results list is scrollable (#169)

--- a/editor/sass/editor/_editor-hierarchy-panel.scss
+++ b/editor/sass/editor/_editor-hierarchy-panel.scss
@@ -92,6 +92,7 @@
             margin: 2px;
             border: none;
             background-color: $bcg-primary;
+            overflow-y: auto;
 
             &:focus {
                 outline: none;
