[Editor/Platform] PCUI styling fixes (#180)
* fix the component panel enabled toggle styling

* bump pcui version

--- a/editor/sass/editor/_editor-component-inspector.scss
+++ b/editor/sass/editor/_editor-component-inspector.scss
@@ -18,7 +18,7 @@
 
 .component-inspector-enabled {
     > .pcui-label:first-child {
-        width: auto;
+        width: auto !important;
         @extend .font-bold;
     }
 }
