--- a/editor/sass/editor/_editor-component-script-inspector.scss
+++ b/editor/sass/editor/_editor-component-script-inspector.scss
@@ -18,7 +18,7 @@
 
 .script-component-inspector-script-enabled {
     > .pcui-label:first-child {
-        width: auto;
+        width: auto !important;
         @extend .font-bold;
     }
 }
