Pcui css refactor (#254)

--- a/editor/sass/editor/editor.scss
+++ b/editor/sass/editor/editor.scss
@@ -1,6 +1,4 @@
-@import "../variables";
-@import '../fonts';
-@import "../pcui/pcui-common";
+@import "../pcui/pcui.scss";
 @import "editor-common";
 @import "editor-layout";
 @import "editor-left-toolbar";
