--- a/editor/sass/fonts.scss
+++ b/editor/sass/fonts.scss
@@ -89,3 +89,9 @@
     font-weight: bold;
     font-style: normal;
 }
+
+.fixedFont {
+    font-family: inconsolatamedium, Monaco, Menlo, 'Ubuntu Mono', Consolas, source-code-pro, monospace;
+    font-weight: normal;
+    font-size: 12px;
+}
