--- a/editor/sass/variables.scss
+++ b/editor/sass/variables.scss
@@ -1,20 +1,3 @@
-$bcg-darkest: #20292b;
-$bcg-darker: #293538;
-$bcg-dark: #2c393c;
-$bcg-primary: #364346;
+@import '../node_modules/@playcanvas/pcui/src/scss/variables';
 
-$text-darkest: #5b7073;
-$text-dark: #9ba1a3;
-$text-secondary: #b1b8ba;
-$text-primary: #ffffff;
-$text-active: #f60;
-
-$error: #fb222f;
-
-$error-secondary: #d34141;
-
-$field-padding: 3px;
-
-$border-primary: #232e30;
-
-$disabled-opacity: .4;
+// add extra variables here
