--- a/editor/sass/pcui/pcui.scss
+++ b/editor/sass/pcui/pcui.scss
@@ -25,6 +25,7 @@
 @import '../../node_modules/@playcanvas/pcui/src/components/SelectInput/style';
 @import '../../node_modules/@playcanvas/pcui/src/components/Spinner/style';
 @import '../../node_modules/@playcanvas/pcui/src/components/Progress/style';
+@import '../../node_modules/@playcanvas/pcui/src/components/ContextMenu/style';
 
 // editor specific pcui controls
 @import 'pcui-common';
